# SWMM_GNN_Repository_Paper_version

./: .env_example  .gitignore  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
configs/: Tuindorp development GNN.yaml  Tuindorp development MLP.yaml  Tuindorp transferability GNN.yaml
libraries/: Dashboard.py  MLExperiment.py  MetricCalculator.py  Normalizer.py  Profiler.py  QualityController.py  SWMM_Converter.py  SWMM_Simulation.py  Trainer.py  utils.py  utils_data.py
libraries/models/: GNN_model.py  Layers.py  MLP_model.py  Model_main.py
notebooks/: Database_creation.ipynb  Model_development.ipynb  Model_testing.ipynb
